--- a/ccac-parent-pom/pom.xml
+++ b/ccac-parent-pom/pom.xml
@@ -51,6 +51,11 @@
         </dependency>
         <dependency>
           <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.springframework</groupId>
           <artifactId>spring-web</artifactId>
           <version>${springframework.version}</version>
         </dependency>
@@ -59,6 +64,16 @@
         <dependency>
           <groupId>com.acholding.framework</groupId>
           <artifactId>ccac-exceptions</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>com.acholding.framework</groupId>
+          <artifactId>ccac-persistence</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>com.acholding.framework</groupId>
+          <artifactId>ccac-service</artifactId>
           <version>${project.version}</version>
         </dependency>
       </dependencies>
