--- a/ccac-service/pom.xml
+++ b/ccac-service/pom.xml
@@ -10,13 +10,23 @@
     <relativePath>../ccac-parent-pom/pom.xml</relativePath>
   </parent>
   
-  <artifactId>ccac-rest-service</artifactId>
-  <name>CCAC Rest-Service: Rest-Service</name>
+  <artifactId>ccac-service</artifactId>
+  <name>CCAC Rest-Service: Service</name>
 
   <dependencies>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      <version>2.0.1.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
     </dependency>
     
     <!-- Internal dependencies -->
@@ -26,23 +36,7 @@
     </dependency>
     <dependency>
       <groupId>com.acholding.framework</groupId>
-      <artifactId>ccac-service</artifactId>
+      <artifactId>ccac-persistence</artifactId>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>repackage</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
 </project>
